--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-addons-update": "^15.6.2",
     "react-bootstrap-typeahead": "^3.2.1",
     "react-dom": "^16.4.2",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-select": "^2.0.0"
