--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.18.0",
     "firebase": "^5.4.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "re-base": "^4.0.0",
-    "react": "^16.4.2",
+    "react": "^16.9.0",
     "react-addons-update": "^15.6.2",
     "react-bootstrap-typeahead": "^3.2.1",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.9.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
